--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>date-demo</title>
   </head>
   <body>
-    <div id="app"></div>
+         <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script>
+  console.log('1')
+</script>
